--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
         <div class="subheading mb-5">San Luis Obispo, CA 93405 · (805) 296-8772 ·
           <a href="mailto:name@email.com">atan37@calpoly.com</a>
         </div>
-        <p class="lead mb-5">I am a third-year business administration student at Cal Poly, concentrating in Quantitative Analysis, subjects that require a thorough mind-set of logic and practicality, aligns with my interest and attraction to the world of business and management. Staying abreast of key trends, I strive to increase my knowledge, experience and skill sets for the modern business world. Aside, I enjoy travelling and learning about other cultures, as well as listening to music.</p>
+        <p class="lead mb-5">I am a third-year business administration student at Cal Poly, 
+            concentrating in Quantitative Analysis, subjects that require a thorough mind-set of logic and practicality, 
+            aligns with my interest and attraction to the world of business and management. Staying abreast of key trends, 
+            I strive to increase my knowledge, experience and skill sets for the modern business world. 
+            Aside, I enjoy travelling and learning about other cultures, as well as listening to music.</p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
@@ -95,12 +99,13 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Academic Programs and Planning Office, Administrative Student Assistant</h3>
+            <div class="subheading mb-3">California Polytechnic State University - San Luis Obispo</div>
+            <p>Ensure accuracy and validity of data and documents through research and verification.</p>
+            <p>Provide administrative support; assist in time scheduling for meetings and preparing travel itineraries </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">August 2019 - Present</span>
           </div>
         </div>
 
