--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Casual Crew</h3>
             <div class="subheading mb-3">McDonald's - Subang Jaya, Malaysia</div>
@@ -150,7 +150,7 @@
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Peer Tutor</h3>
             <div class="subheading mb-3">INTI International University & Colleges - Subang Jaya, Malaysia</div>
@@ -159,6 +159,19 @@
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2016 - December 2016</span>
+          </div>
+        </div>
+        
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Retail Assistant</h3>
+            <div class="subheading mb-3">Lifeshop Atelier</div>
+              <p>• Assisted in visual merchandising by creating appealing merchandise displays and planning strategies to improve product visibility and to attract new customers </p>
+              <p>• Managed sales records by tracking invoice records and coordinating inventory </p>
+              <p>• Gained customer service skills; learned to provide positive attitude and being attentive to details while serving and communicating with customers </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">March 2016 - May 2010</span>
           </div>
         </div>
           
