--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             I strive to increase my knowledge, experience and skill sets for the modern business world. 
             Aside, I enjoy travelling and learning about other cultures, as well as listening to music.</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/anyeetan/">
             <i class="fab fa-linkedin-in"></i>
           </a>
           <a href="#">
@@ -303,18 +303,16 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+            Dean's Honors List - Cal Poly San Luis Obispo </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
+            Dean's List INTI International College Subang</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+            INTI-Laureate Merit Scholarship</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+            Gold Award - 21st Century International Arts Festival - International Band Competition 2013</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             2<sup>nd</sup>
