--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div class="subheading mb-3">Bachelor of Science</div>
             <div>Business Administration - Quantitative Analysis</div>
             <p>Minor: Statistics, Psychology</p>
-            <p>GPA: 3.6</p>
+            <p>CGPA: 3.6</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2019 - Present</span>
@@ -312,7 +312,7 @@
             INTI-Laureate Merit Scholarship</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Gold Award - 21st Century International Arts Festival - International Band Competition 2013</li>
+            Gold Award - 21<sup>st</sup> Century International Arts Festival - International Band Competition 2013</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             2<sup>nd</sup>
