--- a/index.html
+++ b/index.html
@@ -261,20 +261,44 @@
           </li>
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
+
+        <div class="subheading mb-3">Languages</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            Mandarin</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
+            English</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
+            Malay</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
+            Cantonese</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Hakka</li>
+        </ul>
+      </div>
+        
+        <div class="subheading mb-3">Strengths</div>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Achiever</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Responsibility</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Restorative</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Futuristic</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Developer</li>
         </ul>
       </div>
     </section>
