--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           </div>
         </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Poi Lam High School - Malaysia</h3>
             <div class="subheading mb-3">Cambridge GCE O-Levels, Malaysian Certificate of Education</div>
@@ -280,7 +280,6 @@
             <i class="fa-li fa fa-check"></i>
             Hakka</li>
         </ul>
-      </div>
         
         <div class="subheading mb-3">Strengths</div>
         <ul class="fa-ul mb-0">
@@ -300,7 +299,8 @@
             <i class="fa-li fa fa-check"></i>
             Developer</li>
         </ul>
-      </div>
+        </div>
+      
     </section>
 
     <hr class="m-0">
@@ -321,10 +321,10 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Dean's Honors List - Cal Poly San Luis Obispo </li>
+            Dean's Honors List - Cal Poly - San Luis Obispo </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Dean's List INTI International College Subang</li>
+            Dean's List - INTI International College Subang, Malaysia</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             INTI-Laureate Merit Scholarship</li>
