--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a student, I enjoy most of my time being outdoors. I enjoy hiking, going to the beach, or just simply watching the sunset or stargazing. I have camped at a few National Parks in California, and Big Sur is my favourite.</p>
-        <p class="mb-0">When I am not outdoors, I like spending time with family and friends. I also enjoy baking and cooking, being able to customize recipes into a healthier version of my own which also taste good at the same time makes me happy. </p>
+        <p>Apart from being a student, I enjoy most of my time being outdoors. I enjoy hiking, camping, going to the beach, or just simply watching the sunset or stargazing. I have camped at a few National Parks in California, and Big Sur is my favourite.</p>
+        <p class="mb-0">When I am not being outdoors, I like spending time with family and friends. I also enjoy baking and cooking, being able to customize recipes into a healthier version of my own which also taste good at the same time makes me happy. </p>
       </div>
     </section>
 
