--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <span class="text-primary">Tan</span>
         </h1>
         <div class="subheading mb-5">San Luis Obispo, CA 93405 · (805) 296-8772 ·
-          <a href="mailto:name@email.com">atan37@calpoly.com</a>
+          <a href="mailto:name@email.com">atan37@calpoly.edu</a>
         </div>
         <p class="lead mb-5">I am a third-year business administration student at Cal Poly, 
             concentrating in Quantitative Analysis, subjects that require a thorough mind-set of logic and practicality, 
