--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Academic Programs and Planning Office, Administrative Student Assistant</h3>
-            <div class="subheading mb-3">Cal Poly - San Luis Obispo</div>
+            <h3 class="mb-0">Administrative Student Assistant</h3>
+            <div class="subheading mb-3">Cal Poly Academic Programs and Planning Office</div>
             <p>• Review and organize 1000+ documents for on and off campus activities by proofreading and record-keeping</p>
             <p>• Ensure accuracy and validity of data and documents through research and verification.</p>
             <p>• Provide administrative support; assist in time scheduling for meetings and preparing travel itineraries </p>
@@ -121,7 +121,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Data Analyst & Marketing Intern</h3>
-            <div class="subheading mb-3">TEN Life Health Technology Corporation</div>
+            <div class="subheading mb-3">TEN Life Health Technology Corporation - HsinChu, Taiwan</div>
             <p>• Analyzed and visualized data and effect of company's new product with the application of scientific and traditional methods prior the official launch</p>
             <p>• Discovered customer’s behaviour flow, website traffic and source through Google Analytics</p>
             <p>• Managed social media platforms by conducting marketing events, installed chatbot and promoted products, as well as identified marketing events performance</p>
@@ -159,7 +159,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Retail Assistant</h3>
-            <div class="subheading mb-3">Lifeshop Atelier</div>
+            <div class="subheading mb-3">Lifeshop Atelier - Ipoh, Malaysia</div>
               <p>• Assisted in visual merchandising by creating appealing merchandise displays and planning strategies to improve product visibility and to attract new customers </p>
               <p>• Managed sales records by tracking invoice records and coordinating inventory </p>
               <p>• Gained customer service skills; learned to provide positive attitude and being attentive to details while serving and communicating with customers </p>
